clean up of  the Cors Config