@@ -1,5 +1,6 @@
 package com.avilachehab.christmasgifts.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -12,18 +13,40 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
+    private static final String CORS_PATH_PATTERN = "/**";
+
+    @Value("${app.cors.allowed-origins}")
+    private String allowedOrigins;
+
+    @Value("${app.cors.allowed-methods}")
+    private String allowedMethods;
+
+    @Value("${app.cors.allowed-headers}")
+    private String allowedHeaders;
+
+    @Value("${app.cors.exposed-headers}")
+    private String exposedHeaders;
+
     @Bean
     public CorsFilter corsFilter() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
         
-        config.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:3000"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
-        config.setExposedHeaders(Arrays.asList("Authorization"));
+        // Parse comma-separated values from properties
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        List<String> methods = Arrays.asList(allowedMethods.split(","));
+        List<String> headers = allowedHeaders.equals("*") 
+                ? List.of("*") 
+                : Arrays.asList(allowedHeaders.split(","));
+        List<String> exposed = Arrays.asList(exposedHeaders.split(","));
+        
+        config.setAllowedOrigins(origins);
+        config.setAllowedMethods(methods);
+        config.setAllowedHeaders(headers);
+        config.setExposedHeaders(exposed);
         config.setAllowCredentials(true);
         
-        source.registerCorsConfiguration("/**", config);
+        source.registerCorsConfiguration(CORS_PATH_PATTERN, config);
         return new CorsFilter(source);
     }
 }
